--- a/index.html
+++ b/index.html
@@ -26,3 +26,7 @@ layout: default
 </div>
 <aside class="sidebar">
 </aside>
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@techopener">
+<meta name="twitter:title" content="Tech Opener Blog">
+<meta name="twitter:description" content="Share more">
